TFP-6318 Fjerner all ny kode ifm AAP praksisendring